Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120693

Corrupt JPEG data

XMLWordPrintable

    • Windows
    • e912d51da (dev), 7f775ba57 (6.10), 321f884a5 (6.9), dfc6c1c49 (tqtc/lts-6.8)

      In the attached example, selecting a QCameraFormat where pixelFormat == QVideoFrameFormat::Format_Jpeg produces the following output in the Application Ouput pane of the Qt Creator:

       

      qt.gui.imageio.jpeg: Corrupt JPEG data: 4 extraneous bytes before marker 0xd6
      qt.gui.imageio.jpeg: Corrupt JPEG data: 2 extraneous bytes before marker 0xd4
      qt.gui.imageio.jpeg: Corrupt JPEG data: 1 extraneous bytes before marker 0xd2

      ...

       

      The attached code reproduces this bug using a lightly-modified declarative-camera example, which simply selects a JPEG pixel format for the active camera.

       

        For Gerrit Dashboard: QTBUG-120693
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            bjones Bryan Jones
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes