Video: JPEG - discard data after EOI marker

JPEG byte streams start with an SOI marker and end with an EOI marker
2-byte sequence. Some usb cameras seem to provide extra bytes after the
EOI marker that cause libJPEG to emit warnings.
We therefore discard all extra data after the EOI marker.

Pick-to: 6.9 6.8
Fixes: QTBUG-120693
Change-Id: I06999e22560063a8645ce304fe23af6f076f4784
Reviewed-by: Nils Petter Skålerud <nils.petter.skalerud@qt.io>
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit e912d51dab5737953aa598d4dcea7e1179d61b86)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>